--- a/index.css
+++ b/index.css
@@ -6,7 +6,25 @@
     flex-direction: column;
 }
 
-#createAccountContainer {
+
+.signup-container {
+    max-width: 400px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+input[name="name"],
+input[name="email"],
+input[name="password"] {
+    width: 100%;
+    padding: 7px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}nname
+#cnameeAccountContainer {
     display: none;
 }
 
